start team page, edit schema
