# packages/zod/src/schemas/activity.schema.ts
@@ -11,11 +11,11 @@ export const ActivitySchema = z.object({
   react_to: z.string(),
   invite_to: z.string(),
   source: SOURCE,
-  activity_type_id: z.string(),
-  channel_id: z.string(),
-  event_id: z.string().nullable(),
-  member_id: z.string(),
-  workspace_id: z.string(),
+  activity_type_id: z.string().uuid(),
+  channel_id: z.string().uuid().nullable(),
+  event_id: z.string().uuid().nullable(),
+  member_id: z.string().uuid(),
+  workspace_id: z.string().uuid(),
   created_at: z.coerce.date(),
   updated_at: z.coerce.date(),
 });
